--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -10,3 +10,6 @@ dependencies:
 - name: service1
   repository: http://jenkins-x-chartmuseum:8080
   version: 0.0.2
+- name: service2
+  repository: http://jenkins-x-chartmuseum:8080
+  version: 0.0.2
