--- a/env/values.yaml
+++ b/env/values.yaml
@@ -21,4 +21,18 @@ expose:
 jenkins:
   Servers:
     Global: {}
+service1:
+  hpa:
+    enabled: true
+  istio:
+    enabled: true
+    gateway: jx-istio-prod
+    path: /service1
+service2:
+  hpa:
+    enabled: true
+  istio:
+    enabled: true
+    gateway: jx-istio-prod
+    path: /service2
 prow: {}
